--- a/app/src/main/res/layout/activity_swipe_card.xml
+++ b/app/src/main/res/layout/activity_swipe_card.xml
@@ -32,7 +32,7 @@
 
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/frame"
-        android:background="@android:color/white"
+        android:background="@drawable/blur"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:rotation_degrees="15.5"
