Android Manifest updated

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/roundedsignup"
-        android:onClick="onLogin"
+        android:onClick="onSignup"
         android:text="LOGIN"
         android:textColor="@android:color/white"
         android:textSize="16sp"
@@ -123,7 +123,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@null"
-        android:onClick="onForgetPassword"
         android:text="Forgot Password?"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/btnSignup"
