--- a/app/src/main/res/layout/activity_swipe_card.xml
+++ b/app/src/main/res/layout/activity_swipe_card.xml
@@ -11,23 +11,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
+
+        <TextView
+            android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SignOut"
-            android:onClick="logoutUser" />
-        <Button
             android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Matches"
-            android:onClick="goToMatches" />
+            android:fontFamily="@font/lato"
+            android:text="Browse"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="24sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
-            android:onClick="goToSettings" />
+            android:layout_weight="1"
+            android:background="@null"
+            android:fontFamily="@font/lato"
+            android:onClick="logoutUser"
+            android:text="SignOut" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:fontFamily="@font/lato"
+            android:onClick="goToMatches"
+            android:text="Matches" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:fontFamily="@font/lato"
+            android:onClick="goToSettings"
+            android:text="Settings" />
     </LinearLayout>
 
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
